# taloslib

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
talos/: __init__.py  datapipe.py  layers.py  logs.py  training.py  utils.py
talos/models/: __init__.py  archs.py  basic.py  hub.py  huggingface.py  modify.py  torchhub.py  trans_archs.py  transformers.py
